fixing logo and body-join size on small screens

--- a/css/master.css
+++ b/css/master.css
@@ -156,6 +156,13 @@ ul {
   top: 7em;
   width: 50%;
 }
+@media screen and (max-width: 600px) {
+  .body-join {
+    padding: 10px;
+    width: 90%;
+    min-width: 300px;
+  }
+}
 
 .btn-1 {
   background-color: #F5F5F5;
@@ -168,12 +175,12 @@ ul {
 
 .btn-2 {
   background-color: #FF52BF;
-  border-radius: 10vh;
+  border-radius: 50%;
   box-shadow: 0 0 2vw 0 #CCC;
   color: #EBFBFF;
   display: inline-block;
   /* font-weight: 700; */
-  margin-right: 5vw;
+  /* margin-right: 5vw; */
   padding: 0.75em 3em;
 }
 
